Refine .gitignore to exclude specific HTML build files and keep template HTML files; update resume generation scripts to use absolute paths for templates; add new index and resume templates for improved structure and styling.

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,13 @@ assets/pdfs/*.pdf
 /result
 
 # Temporary files
-*.html
+/build/*.html
 *.tmp
 *~
 *.bak
+
+# Keep template HTML files
+!templates/*.html
 
 # Node modules (if you add any JS-based tools)
 node_modules/
