--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,12 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -42,6 +48,9 @@ jobs:
           cp -r build/* pages/
           cp templates/index-template.html pages/index.html
           
+          # Create .nojekyll file to prevent Jekyll processing
+          touch pages/.nojekyll
+          
           # Replace placeholder with actual GitHub username
           GITHUB_USERNAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
           sed -i "s/yourusername/$GITHUB_USERNAME/g" pages/index.html
@@ -50,8 +59,9 @@ jobs:
       # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         if: github.ref == 'refs/heads/main'
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: pages
           clean: true
+          token: ${{ github.token }}
