Refactor build process to use GitHub token directly, remove sandbox settings for network access, and replace external font resources with system fonts for improved build reliability.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v31
         with:
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          github_access_token: ${{ github.token }}
       
       - name: Build Resumes
         run: |
