--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Resume
+name: Build and Deploy Resume
 
 on:
   push:
@@ -9,71 +9,93 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: write
+  contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
+  # Build job
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Install Nix
-        uses: cachix/install-nix-action@v31
-        with:
-          github_access_token: ${{ github.token }}
-      
-      - name: Build Resumes
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build with Docker
         run: |
-          # Build the project
-          nix build
+          # Build the application using Docker
+          docker build -f Dockerfile.build -t cv-portfolio-builder .
           
-          # Create build directory if it doesn't exist
-          mkdir -p build
-          
-          # Copy the build outputs to the expected location
-          cp -r ./result/build/* ./build/
+          # Extract built files from container
+          docker create --name builder cv-portfolio-builder
+          docker cp builder:/app/dist ./dist
+          docker rm builder
 
-      - name: Upload HTML resume
-        uses: actions/upload-artifact@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: resume-html
-          path: build/resume.html
+          path: './dist'
 
-      - name: Upload PDF resumes
-        uses: actions/upload-artifact@v4
-        with:
-          name: resume-pdfs
-          path: |
-            build/resume.pdf
-            build/one_page_resume.pdf
-
-      # Prepare content for GitHub Pages
-      - name: Prepare GitHub Pages content
-        if: github.ref == 'refs/heads/main'
-        run: |
-          mkdir -p pages
-          cp -r build/* pages/
-          
-          # Create index.html from template
-          cp templates/index-template.html pages/index.html
-          
-          # Create .nojekyll file to prevent Jekyll processing
-          touch pages/.nojekyll
-          
-          # Replace placeholder with actual GitHub username
-          GITHUB_USERNAME=$(echo $GITHUB_REPOSITORY | cut -d '/' -f 1)
-          sed -i "s/yourusername/$GITHUB_USERNAME/g" pages/index.html
-          sed -i "s/yourusername/$GITHUB_USERNAME/g" pages/resume.html
-
-      # Deploy to GitHub Pages
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
       - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main'
-        uses: JamesIves/github-pages-deploy-action@v4
+        id: deployment
+        uses: actions/deploy-pages@v4
+
+  # Docker image build and push (optional)
+  docker:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          branch: gh-pages
-          folder: pages
-          clean: true
-          token: ${{ github.token }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
