--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
       
       - name: Build with Docker
         run: |
+          mkdir -p dist && touch dist/.nojekyll
           ./dev.sh build
-          touch dist/.nojekyll
 
       - name: Upload built assets
         uses: actions/upload-artifact@v4
@@ -34,7 +34,6 @@ jobs:
           name: built-portfolio
           path: dist/
 
-      # Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         # if: github.ref == 'refs/heads/main'
         uses: JamesIves/github-pages-deploy-action@v4
